# OpenCV-Face-Detection

./: .gitignore  CMakeLists.txt  README.md  face_detection.cpp
